src/main.css
@font-face{
    font-family: gothic;
    src: url('./assets/GOTHIC.TTF');
}

@font-face{
    font-family: gothicBold;
    src: url('./assets/GOTHICB.TTF');
}

.icon-link{
    color: white;
    margin: 2px;
}
html{
    min-height: 100%;
} 
     
body{
    height: 100%;
    background-size: auto 100%;
    background: -webkit-gradient(linear, left top, left bottom, from(#06171f), to(#1e6a8e)) fixed;
    background-repeat: no-repeat;
}

p, i, h1, h2, h3, h4, h5, h6 {
    color: white;
}

h1, h2, h3, h4, h5, h6 {
    font-family: gothicBold;
}

p, i{
    font-family: gothic;
}

.text-bold{
    font-family: gothicBold !important;
}

.btn-inactive{
    opacity: 0.5;
}

.segment-top{
    padding-top: 5rem !important;
}

.content-list{
    list-style: none;
}

.main-title{
    position: absolute;
    top: 40%;
}

.main-title h1{
    font-size: 4em;
}

.btn-main{
    transition: 0.5s;
    color: white;
}

.btn-main:hover{
    color: white;
}

.back-btn{
    transition: 0.5s;
}

.back-btn:hover{
    transform: translateX(15px);
}

.bullit-circle{
    width: 15px;
    height: 15px;
    border: solid 3px white;
    border-radius: 50px;
}

/* Animations */

@keyframes fade-up{
    from{
        transform: translateY(3rem);
        opacity: 0;
    }
    to{
        opacity: 1;
    }
}

.fade-up{
    animation: fade-up 2s;
}

.grow{
    transition: 2s;
}

.grow:hover{
    color: rgb(93, 163, 130);
    font-size: 6rem;
}

